[package]
name = "set2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
aes = "0.8.4"
itertools = "0.8.0"
bytearrayconversion = { path = "../../bytearrayconversion" }
xorcipher = { path = "../../xorcipher" }
aescipher = { path = "../../aescipher" }
