[package]
name = "set3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bytearrayconversion = { path = "../../bytearrayconversion" }
xorcipher = { path = "../../xorcipher" }
aescipher = { path = "../../aescipher" }
mersennetwister = { path = "../../mersennetwister" }
