[package]
name = "set4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "set4"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
axum = "0.7.5"
axum-server = "0.6.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bytearrayconversion = { path = "../../bytearrayconversion" }
xorcipher = { path = "../../xorcipher" }
aescipher = { path = "../../aescipher" }
vecofbits = { path = "../../vecofbits" }
md4hash = { path = "../../md4hash" }
sha1hash = { path = "../../sha1hash" }
set3 = { path = "../set3" }
